# gastropy

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  JOSS_ROADMAP.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  lint.yml  tests.yml
_archive/: .isort.cfg  .pre-commit-config.yaml  .travis.yml  README.rst  requirements.txt  setup.py
_archive/gastropy_old/: __init__.py  plots.py
_archive/notebooks/: Tutorial.ipynb
docs/: conf.py  getting_started.rst  index.rst  installation.rst
docs/api/: index.rst
docs/examples/: artifact_removal.ipynb  bandpass_filtering.ipynb  brain_maps.ipynb  channel_selection.ipynb  circular_statistics.ipynb  coupling_pipeline.ipynb  egg_process.ipynb  fmri_egg_pipeline.ipynb  index.rst  multiband_analysis.ipynb  multichannel_processing.ipynb  plot_artifacts.ipynb  plot_cycle_histogram.ipynb  plot_egg_comprehensive.ipynb  plot_egg_overview.ipynb  plot_psd.ipynb  plot_volume_phase.ipynb  plv_computation.ipynb  psd_parameters.ipynb  quality_assessment.ipynb  surrogate_testing.ipynb  time_frequency.ipynb
docs/tutorials/: egg_processing.ipynb  fmri_coupling_real.ipynb  gastric_brain_coupling.ipynb  index.rst  multichannel_pipeline.ipynb
examples/matlab/: egg_to_bids.m
figures/: README.md
gastropy/: __init__.py
gastropy/coupling/: __init__.py  circular.py  plv.py  surrogate.py
gastropy/data/: DATA_LICENSE.md  __init__.py  egg_standalone.npz  fmri_egg_session_0001.npz  fmri_egg_session_0003.npz  fmri_egg_session_0004.npz  fmri_egg_session_0008.npz  sub-01_ses-0001_task-rest_physio.json  sub-01_ses-0003_task-rest_physio.json  sub-01_ses-0004_task-rest_physio.json  sub-01_ses-0008_task-rest_physio.json  sub-wolpert_task-rest_physio.json
gastropy/egg/: __init__.py  egg_process.py  egg_select.py  multichannel.py
gastropy/io/: __init__.py  _bids.py  _brainvision.py
gastropy/metrics/: __init__.py  bands.py  quality.py  stability.py
gastropy/misc/: __init__.py
gastropy/neuro/: __init__.py  eeg.py  fmri.py  meg.py
gastropy/signal/: __init__.py  artifacts.py  filtering.py  ica.py  phase.py  preprocessing.py  resampling.py  sine.py  spectral.py
gastropy/stats/: __init__.py
gastropy/timefreq/: __init__.py  decompose.py  (+1 more)
paper/: EGGLIT.bib  JOSS_ROADMAP.md  gastropy_paper.tex  paper.bib  paper.md
scripts/: convert_npz_to_bids.py  convert_sample_data.py  create_brain_maps_example.py  create_real_tutorial.py  survey_egg_sessions.py
tests/: test_artifacts.py  test_coupling.py  test_data.py  test_egg.py  test_ica.py  test_import.py  test_io.py  test_metrics.py  test_neuro_fmri.py  test_preprocessing.py  test_signal.py  test_sine.py  test_timefreq.py  test_viz.py  test_viz_brain.py
tutorials/: README.md
(+6 files in other folders)
